test/libsolidity/syntaxTests/userDefinedValueType/recursive_function_paramter_err.sol
type MyFunction is function(MyFunction) external returns(MyFunction);
// ----
// TypeError 8657: (28-38): The type has to be an elementary value type.
